--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -120,11 +120,11 @@ We do not find that later producers are sampling words from a different or more 
 Overall, we find that if a lag between comprehension and general referential production exists in development, it is much shorter than previously thought, and most likely driven by developing linguistic capacities and not by a cognitive shift. Furthermore, our results suggest that conceptual and linguistic development are closely linked, and although the age of onset for productive language may vary across children, the semantic referents of first words are likely to be fairly consistent. Finally, we suggest that first words within semantic categories are predicted by phonetic complexity and input frequency. 
 
 \subsection{Exclusion of ``mama'' and ``dada''}
-While many parents reported that their child's first word was ``mama'' or ``dada'' (or some variant), we excluded these children from our analyses. Parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Therefore, we stressed in our surveys that parents were to report their children's first word $other$ than ``mama'' or ``dada'' to avoid the possibility of skewing the data. After pilot testing on Amazon Mechanical Turk, we added another question asking whether the child's first utterance was ``mama'' or ``dada,'' and found that 1112 parents reported their children producing ``mama'' (N = 618) or "dada" (N = 494) other than another first word (N = 559). 
+While many parents reported that their child's first word was ``mama'' or ``dada'' (or some variant), we excluded these children from our analyses. Parents may be motivated to hear these words very early in babble, even when the word is not being used in a meaningful or consistent way. Therefore, we stressed in our surveys that parents were to report their children's first word $other$ than ``mama'' or ``dada'' to avoid the possibility of skewing the data. After pilot testing on Amazon Mechanical Turk, we added another question asking whether the child's first utterance was ``mama'', ``dada'', or another first word. 1112 parents reported their children producing ``mama'' (N = 618) or "dada" (N = 494) rather than another word (N = 559) as a first utterance. 
 
 \subsection{Age} 
 
-Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production \cite{fenson1994} and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension \cite{tincoff1999,tincoff2012,bergelson2012}, we wished to explore the development of first word production, especially prior to 12 months.
+Despite evidence for very early word comprehension \cite{tincoff1999,tincoff2012,bergelson2012}, conventional wisdom generally holds that first word emerges at around 12 months. However, a child's first word is almost exclusively heard by a parent or other caretaker and can be very difficult for an external observer to measure. Is this reported lag between comprehension and production real or apparent?  Given the possibility of very early noun comprehension \cite{tincoff1999,tincoff2012,bergelson2012}, we wished to explore the development of first word production, especially prior to 12 months.
 
 Across the 4 datasets, we grouped data by age and by dataset, $N_{total} = 3173$. Twenty--one children were excluded for not having spoken yet (M age = 2.7 mo, median = 2 mo). We then plotted the cumulative probability of a child having produced a first word as a function of their age (Figure 1).
 
@@ -134,13 +134,11 @@ Across the 4 datasets, we grouped data by age and by dataset, $N_{total} = 3173$
 \caption{\label{fig:cdfs} Age graph showing the cumulative probability of producing a word as a function of age.}
 \end{figure}
 
-Before 12 months, approximately 75\% of children have produced a first word, and we see a gradual but consistent increase as the child ages as expected. The plot of the Mechanical Turk data, the largest dataset, is most likely the most representative of child word production, while the other datasets asymptote fairly quickly between about 14 and 17 months. 
-These data suggest that children are speaking before 12 months relatively frequently. To discern whether there might be a bias on behalf of parents of older children to report a younger first word, we ran a (TEST), but did not receive a significant result ($p > XX$).
+Prior to 12 months, approximately 75\% of children have produced a first word, and we see a gradual but consistent increase from 12--24 months. The plot of the Mechanical Turk data, the largest dataset, is most likely the most representative of child word production, while the other datasets asymptote fairly quickly between about 14 and 17 months. These data suggest that production may not lag comprehension as much as previously thought. To discern whether there might be a bias on behalf of parents of older children to report a younger first word, we ran a (TEST), but did not receive a significant result ($p > XX$).
 
-Why are some children producing language earlier than other children, and what does this reveal about the relationship between their conceptual and linguistic development? When children produce early language ($<$12 months) as opposed to a later one, are they choosing to produce conceptually different words than children who speak later? Or, are conceptual and linguistic development more closely linked? In our next analysis, we examined the CDI category frequencies of children's first words to explore whether very early first words differ conceptually from later--produced words. 
 
 \subsection{CDI Categories} 
-Previous work has established that the CDI normative categories are not equally represented in first word production \cite{fenson1994}. If early word producers have a different distribution of CDI categories, this might suggest that linguistic development is loosely related to conceptual development, and that a later producer is sampling from a larger array of words that are conceptually available to her.
+Why are some children producing language earlier than other children, and what does this reveal about the relationship between their conceptual and linguistic development? Previous work has established that the CDI normative categories are not equally represented in first word production \cite{fenson1994}. When children produce early language ($<$12 months), are they choosing to produce conceptually different words than children who speak later? Or, are conceptual and linguistic development more closely linked, with the same semantic categories appearing as first words regardless of age of utterance? In our next analysis, we examined the CDI category frequencies of children's first words to explore whether very early first words differ conceptually from later--produced words. 
 
 In this analysis, CDI categories were assigned by the researcher based on the MB--CDI parental report form, and validated across datasets. In instances where words did not appear on the MB--CDI, categories were assigned ad hoc and validated across datasets for consistency. Ninety--one children were excluded because their first word was unable to categorized. We grouped the data by dataset, and performed an age split at 12 months. Figure 2 shows the frequencies of the CDI categories split by age and grouped by dataset.
 
@@ -150,11 +148,11 @@ In this analysis, CDI categories were assigned by the researcher based on the MB
 \caption{\label{fig:cdfs} Histogram of CDI category frequencies across datasets.}
 \end{figure}
 
-Distributions of CDI category frequency across all 4 datasets quite similar. We constructed a linear model, and did not find an effect of dataset on CDI category distribution ($p > XX$). Although more children are included in the $>$ 12 month group, the distributions of the CDI category representations remain almost identical.
+Distributions of CDI category frequency across all 4 datasets were quite similar. We constructed a linear model, and did not find an effect of dataset on CDI category distribution ($p > XX$). Although more children are included in the $>$ 12 month group, the distributions of the CDI category representations remain very similar.
 
 Animals, Games and Routines, Toys, and People, followed closely by Food and Drink are frequent first word categories, and seem to be equally compelling as a first word for both early and later producers. Data for later speakers in Wordbank is sparse, because children were selected for this analysis when they were producing exactly one word, according to parental report on the MB--CDI. Only 27 children produced only exactly word in this group.
 
-Despite producing a first word during different points in their conceptual development, both early and later producers are choosing to speak about the same semantic categories. This would suggest that children's linguistic and conceptual development are more intimately related, and the production of a first word is possibly not just the result of a cognitive shift, but an ability to produce and form words.
+Despite producing a first word during different points in their conceptual development, both early and later producers are choosing to speak about the same semantic categories, and in many cases, the same things (Figure 3). This would suggest that children's linguistic and conceptual development are more intimately related, and the production of a first word is possibly not the result of a cognitive shift, but an ability to produce and form words.
 
 
 %FIGURE 3
@@ -175,7 +173,7 @@ Duck & Hi & Bye & Hi \\
 \caption{\label{tab:top5} Top 5 first words (excluding ``mama'' and ``dada'') from each of the four datasets we examined.}
 \end{table}
 
-However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production, and potentially just relevance to a developing child. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word variability.
+However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word productions.
 
 
 \section{Predicting First Words}
@@ -184,7 +182,7 @@ Our previous analyses found a high degree of consistency among children's first 
 
 \subsection{Method}
 
-Because the set of all possible words is infinite, it is impossible to normalize correctly. Thus, we chose to use a representative set that would allow us to have the same basis for comparison across datasets: the 385 words on the MCDI Words and Gestures form. We thus chose the subset of words in each of our datasets that appeared on the cdi, and asked about the relative probability of production of each of these words.
+Because the set of all possible words is infinite, it is impossible to normalize correctly. Thus, we chose to use a representative set that would allow us to have the same basis for comparison across datasets: the 385 words on the MB-CDI Words and Gestures form. We thus chose the subset of words in each of our datasets that appeared on the CDI, and asked about the relative probability of production of each of these words.
 
 To estimate the frequency with children hear each of these words, we counted the number of times each appeared in CHILDES---a large corpus of parent-child interactions \cite{macwhinney2000}. In order to ensure a representative sample, we counted the number of appearances of each word in a child's mother's speech across all of the corpora in the North American subset of CHILDES. These frequencies were then log-transformed and used to predict first words.
 
